src/test/ui/borrowck/borrowck-auto-mut-ref-to-immut-var.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-auto-mut-ref-to-immut-var.rs:15:5
   |
LL |     let x = Foo { x: 3 };
   |         - help: consider changing this to be mutable: `mut x`
LL |     x.printme();
   |     ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
